--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <a href="/zaman_resume.pdf" target="_blank">Download my Resume</a>
     </div>
     <div class="contact">
-        <h2>Contact us</h2>
+        <h2>Contact</h2>
+
         <p>Email: <a href="mailto:your-email@example.com">razazaman7861@gmail.com</a></p>
         <p>Phone: 9258635761 </p>
     </div>
